# computer-use-windows

./: .gitignore  README.md  install.ps1  pyproject.toml
computer_use_windows/: __init__.py  __init__.py.bak_audit10_20260718_151747  __init__.py.bak_audit11_20260718_154156  __init__.py.bak_audit12_20260718_155302  __init__.py.bak_audit13_20260718_163907  __init__.py.bak_audit5_20260718_115847  __init__.py.bak_audit6_20260718_121353  __init__.py.bak_audit9  cli.py  cli.py.bak_audit4_20260718_111114  cli.py.bak_audit_fix_20260718_100838  remote.py  remote.py.bak_audit10_20260718_151747  remote.py.bak_audit11_20260718_154156  remote.py.bak_audit12_20260718_155302  remote.py.bak_audit2_20260718_102756  remote.py.bak_audit3_20260718_104730  remote.py.bak_audit4_20260718_111114  remote.py.bak_audit5_20260718_115847  remote.py.bak_audit6_20260718_121353
computer_use_windows/handlers/: __init__.py  __init__.py.bak_audit7  base.py  base.py.bak_audit5_20260718_115847  windows.py  windows.py.bak_audit10_20260718_151747  windows.py.bak_audit11_20260718_154156  windows.py.bak_audit13_20260718_163907  windows.py.bak_audit4_20260718_111113  windows.py.bak_audit5_20260718_115847  windows.py.bak_audit6_20260718_121352  windows.py.bak_audit7  windows.py.bak_audit8  windows.py.bak_audit9
computer_use_windows/server/: __init__.py  __init__.py.bak_audit10_20260718_151747  __init__.py.bak_audit11_20260718_154156  __init__.py.bak_audit12_20260718_155302  __init__.py.bak_audit13_20260718_163907  __init__.py.bak_audit3_20260718_104730  __init__.py.bak_audit4_20260718_111114  __init__.py.bak_audit5_20260718_115847  __init__.py.bak_audit6_20260718_121352  __init__.py.bak_audit9  __init__.py.bak_audit_fix_20260718_100838
