[build-system]
requires = ["setuptools>=75.6", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "computer-use-windows"
version = "2.1.3"
description = "Windows desktop control MCP server — mouse, keyboard, UI Automation, files, system"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "sbrejnev988-coder" }
]
keywords = ["mcp", "windows", "automation", "ui-automation", "desktop-control", "llm", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastmcp>=2.13.1,<3",
    "Pillow>=10.0",
    "anyio>=4.0",
    "pywin32>=306; platform_system == 'Windows'",
    "psutil>=5.9; platform_system == 'Windows'",
]

[project.optional-dependencies]
# UI Automation support
uia = [
    "uiautomation>=2.0",
]
# Remote WebSocket server
remote = [
    "websockets>=12.0",
]
# All extras
all = [
    "computer-use-windows[uia,remote]",
]

[project.scripts]
computer-use-windows = "computer_use_windows.cli:main"
computer-use-windows-mcp = "computer_use_windows.server:main"
computer-use-windows-remote = "computer_use_windows.remote:main"

[project.urls]
Homepage = "https://github.com/sbrejnev988-coder/computer-use-windows"
Repository = "https://github.com/sbrejnev988-coder/computer-use-windows"
Issues = "https://github.com/sbrejnev988-coder/computer-use-windows/issues"

[tool.setuptools.packages.find]
include = ["computer_use_windows*"]
